--- a/frontend-web/src/styles/global.css
+++ b/frontend-web/src/styles/global.css
@@ -115,8 +115,8 @@ body {
 
 .board-stone {
   display: block;
-  width: 80%;
-  height: 80%;
+  width: 84%;
+  height: 84%;
   border-radius: 9999px;
   pointer-events: none;
 }
